Made the tga module buildable as an external third party module.

--- a/modules/meson.build
+++ b/modules/meson.build
@@ -34,7 +34,8 @@ module_dirs = ['basis_universal',
   'svg',
   'text_server_adv',
   'text_server_fb',
-  'tga',
+# See below
+#  'tga',
   'theora',
   'tinyexr',
   'upnp',
@@ -64,3 +65,13 @@ MAIN_SOURCES += configure_file(
     output: 'register_module_types.gen.cpp',
     command: [find_program('gen_registration.py'), '@OUTPUT@'] + MODULES_ENABLED,
     )
+
+# Now process external modules.
+external_modules = ['tga'] # In the real implementation this would come from a get_option().
+foreach extmod : external_modules
+    sp = subproject(extmod)
+    depobj = sp.get_variable('module_dep')
+    MODULE_DEPENDENCIES += depobj
+    MODULES_ENABLED += [depobj.get_variable('module_names')]
+    # FIXME, add module paths and documentation paths here.
+endforeach
