--- a/servers/rendering/renderer_rd/meson.build
+++ b/servers/rendering/renderer_rd/meson.build
@@ -3,3 +3,4 @@ SOURCES += files(run_command(GLOB, '*.cpp', check: true).stdout().split('\n'))
 subdir('forward_clustered')
 subdir('forward_mobile')
 subdir('shaders')
+subdir('storage_rd')
