--- a/servers/meson.build
+++ b/servers/meson.build
@@ -3,6 +3,7 @@ SOURCES += files(run_command(GLOB, '*.cpp', check: true).stdout().split('\n'))
 subdir('audio')
 subdir('debugger')
 subdir('camera')
+subdir('extensions')
 subdir('physics_2d')
 subdir('physics_3d')
 subdir('rendering')
