--- a/modules/gdscript/meson.build
+++ b/modules/gdscript/meson.build
@@ -1,4 +1,4 @@
-subdir('editor_templates')
+subdir('editor')
 
 _module_gdscript_srcs = files(run_command(GLOB, '*.cpp', check: true).stdout().split('\n'))
 
