--- a/modules/gridmap/meson.build
+++ b/modules/gridmap/meson.build
@@ -1,6 +1,7 @@
 _module_gridmap_srcs = files(run_command(GLOB, '*.cpp', check: true).stdout().split('\n'))
 _lib_module_gridmap = library('module_gridmap',
     _module_gridmap_srcs,
+    'editor/grid_map_editor_plugin.cpp',
     include_directories: '../..',
     dependencies: [godotcore_dep])
 
