--- a/modules/meson.build
+++ b/modules/meson.build
@@ -8,7 +8,7 @@ module_dirs = ['basis_universal',
   'denoise',
   'enet',
   'etcpak',
-  'fbx',
+#  'fbx',
 #  'freetype',
 #  'gdnative',
   'gdscript',
@@ -27,7 +27,7 @@ module_dirs = ['basis_universal',
   'msdfgen',
   'navigation',
   'ogg',
-  'opensimplex',
+#  'opensimplex',
 #  'raycast',
   'regex',
   'squish',
