--- a/servers/rendering/renderer_rd/meson.build
+++ b/servers/rendering/renderer_rd/meson.build
@@ -1,5 +1,6 @@
 SOURCES += files(run_command(GLOB, '*.cpp', check: true).stdout().split('\n'))
 
+subdir('effects')
 subdir('forward_clustered')
 subdir('forward_mobile')
 subdir('shaders')
