--- a/core/extension/meson.build
+++ b/core/extension/meson.build
@@ -1,1 +1,4 @@
+ext_wrappers_gen = configure_file(output: 'ext_wrappers.gen.inc',
+    command: [find_program('make_wrappers.py'), '@OUTPUT@'])
+
 SOURCES += files(run_command(GLOB, '*.cpp', check: true).stdout().split('\n'))
