--- a/modules/enet/meson.build
+++ b/modules/enet/meson.build
@@ -2,6 +2,7 @@ _module_enet_srcs = files(run_command(GLOB, '*.cpp', check: true).stdout().split
 
 _lib_module_enet = library('module_enet',
     _module_enet_srcs,
+    cpp_args: '-DGODOT_ENET',
     dependencies: [godotcore_dep, DEP_ENET]
 )
 
