--- a/drivers/vulkan/meson.build
+++ b/drivers/vulkan/meson.build
@@ -4,11 +4,11 @@ SOURCES += files(run_command(GLOB, '*.cpp', check: true).stdout().split('\n')) +
 
 if PLATFORM == 'android'
    CPP_ARGS += '-DVK_USE_PLATFORM_ANDROID_KHR'
-elif PLATFORM == 'iphone'
+elif PLATFORM == 'ios'
     CPP_ARGS += '-DVK_USE_PLATFORM_IOS_MVK'
 elif PLATFORM == 'linuxbsd'
     CPP_ARGS += '-DVK_USE_PLATFORM_XLIB_KHR'
-elif PLATFORM == 'osx'
+elif PLATFORM == 'macos'
     CPP_ARGS += '-DVK_USE_PLATFORM_MACOS_MVK'
 elif PLATFORM == 'windows'
     CPP_ARGS += '-DVK_USE_PLATFORM_WIN32_KHR'
