--- a/platform/ios/meson.build
+++ b/platform/ios/meson.build
@@ -5,35 +5,35 @@
 ################################################################################
 # Commands to always run
 ################################################################################
-_target_iphone_logo = custom_target(
-    'iphone_logo',
+_target_ios_logo = custom_target(
+    'ios_logo',
     output: ['logo.gen.h'],
     input: ['logo.png'],
-    command: [SCRIPT_PLATFORM_LOGO, '@INPUT@', '@OUTPUT@', 'iphone'],
+    command: [SCRIPT_PLATFORM_LOGO, '@INPUT@', '@OUTPUT@', 'ios'],
     build_by_default: true
 )
-SOURCES += [_target_iphone_logo]
+SOURCES += [_target_ios_logo]
 
 
 ################################################################################
 # Host Machine Specifics
 ################################################################################
-if PLATFORM == 'iphone'
-    MAIN_SOURCES += files('godot_iphone.mm')
+if PLATFORM == 'ios'
+    MAIN_SOURCES += files('godot_ios.mm')
     ios_deps = dependency('AppleFrameworks', modules: ['UIKit',
                                                        #
                                                        ])
     # All Vulkan files commented out.
-    iphone_sources = files(
-        'godot_iphone.mm',
-        'os_iphone.mm',
+    ios_sources = files(
+        'godot_ios.mm',
+        'os_ios.mm',
         'main.m',
         'app_delegate.mm',
         'view_controller.mm',
         'ios.mm',
-        'vulkan_context_iphone.mm',
-        'display_server_iphone.mm',
-        #'joypad_iphone.mm',
+        'vulkan_context_ios.mm',
+        'display_server_ios.mm',
+        #'joypad_ios.mm',
         'godot_view.mm',
         'display_layer.mm',
         'godot_app_delegate.m',
@@ -43,8 +43,8 @@ if PLATFORM == 'iphone'
         'keyboard_input_view.mm',
     )
 
-    SOURCES += iphone_sources
-    CPP_ARGS += ['-DIPHONE_ENABLED', '-DUNIX_ENABLED', '-DCOREAUDIO_ENABLED', '-DVULKAN_ENABLED']
-    OBJCPP_ARGS += ['-fobjc-arc', '-DIPHONE_ENABLED', '-DUNIX_ENABLED', '-DCOREAUDIO_ENABLED', '-DVULKAN_ENABLED']
+    SOURCES += ios_sources
+    CPP_ARGS += ['-DIOS_ENABLED', '-DUNIX_ENABLED', '-DCOREAUDIO_ENABLED', '-DVULKAN_ENABLED']
+    OBJCPP_ARGS += ['-fobjc-arc', '-DIOS_ENABLED', '-DUNIX_ENABLED', '-DCOREAUDIO_ENABLED', '-DVULKAN_ENABLED']
     DEPENDENCIES += ios_deps
 endif
