--- a/servers/rendering/meson.build
+++ b/servers/rendering/meson.build
@@ -1,3 +1,6 @@
 SOURCES += files(run_command(GLOB, '*.cpp', check: true).stdout().split('\n'))
 
+SOURCES += files('dummy/storage/texture_storage.cpp')
+
 subdir('renderer_rd')
+subdir('storage')
