--- a/servers/rendering/renderer_rd/meson.build
+++ b/servers/rendering/renderer_rd/meson.build
@@ -1,6 +1,7 @@
 SOURCES += files(run_command(GLOB, '*.cpp', check: true).stdout().split('\n'))
 
 subdir('effects')
+subdir('environment')
 subdir('forward_clustered')
 subdir('forward_mobile')
 subdir('shaders')
