--- a/servers/meson.build
+++ b/servers/meson.build
@@ -4,6 +4,7 @@ subdir('audio')
 subdir('debugger')
 subdir('camera')
 subdir('extensions')
+subdir('movie_writer')
 subdir('physics_2d')
 subdir('physics_3d')
 subdir('rendering')
