--- a/servers/rendering/renderer_rd/shaders/meson.build
+++ b/servers/rendering/renderer_rd/shaders/meson.build
@@ -1,5 +1,7 @@
 subdir('effects')
 subdir('environment')
+subdir('forward_clustered')
+subdir('forward_mobile')
 
 # NOTE: do not use files() here
 _rd_shaders = run_command(GLOB, '*.glsl', check: true).stdout().split('\n')
