--- a/servers/meson.build
+++ b/servers/meson.build
@@ -5,6 +5,7 @@ subdir('debugger')
 subdir('camera')
 subdir('extensions')
 subdir('movie_writer')
+subdir('navigation')
 subdir('physics_2d')
 subdir('physics_3d')
 subdir('rendering')
