--- a/modules/text_server_fb/meson.build
+++ b/modules/text_server_fb/meson.build
@@ -3,7 +3,10 @@ _module_tsf_srcs = files(run_command(GLOB, '*.cpp', check: true).stdout().split(
 lib_module_tsf = library('module_text_server_fb',
     _module_tsf_srcs,
     cpp_args: ['-DMODULE_FREETYPE_ENABLED'],
-    dependencies: [godotcore_dep, DEP_FREETYPE, DEP_MSDF]
+    dependencies: [godotcore_dep,
+                   thorvg_dep,
+                   DEP_FREETYPE,
+                   DEP_MSDF]
 )
 
 DEP_MODULE_TEXT_SERVER_FB = declare_dependency(link_with: lib_module_tsf)
