--- a/modules/gridmap/meson.build
+++ b/modules/gridmap/meson.build
@@ -3,7 +3,7 @@ _lib_module_gridmap = library('module_gridmap',
     _module_gridmap_srcs,
     'editor/grid_map_editor_plugin.cpp',
     include_directories: '../..',
-    dependencies: [godotcore_dep])
+    dependencies: [godotcore_dep, DEP_ZLIB])
 
 DEP_MODULE_GRIDMAP = declare_dependency(link_with: _lib_module_gridmap)
 
