--- a/platform/linuxbsd/meson.build
+++ b/platform/linuxbsd/meson.build
@@ -5,14 +5,23 @@
 ################################################################################
 # Commands to always run
 ################################################################################
-_target_linuxbsd_logo = custom_target(
+linuxbsd_logo = custom_target(
     'linuxbsd_logo',
-    output: ['logo.gen.h'],
-    input: ['logo.png'],
+    output: ['logo_svg.gen.h'],
+    input: ['logo.svg'],
     command: [SCRIPT_PLATFORM_LOGO, '@INPUT@', '@OUTPUT@', 'linuxbsd'],
     build_by_default: true
 )
-SOURCES += [_target_linuxbsd_logo]
+
+linuxbsd_run_icon = custom_target(
+    'android_run_icon',
+    output: ['run_icon_svg.gen.h'],
+    input: ['run_icon.svg'],
+    command: [SCRIPT_PLATFORM_LOGO, '@INPUT@', '@OUTPUT@', 'linuxbsd'],
+    build_by_default: true
+)
+
+SOURCES += [linuxbsd_logo, linuxbsd_run_icon]
 
 
 ################################################################################
@@ -29,6 +38,7 @@ if PLATFORM == 'linuxbsd'
         'crash_handler_linuxbsd.cpp',
         'os_linuxbsd.cpp',
         'joypad_linux.cpp',
+        'xkbcommon-so_wrap.c',
     )
 
     # get all of our dependencies
