--- a/platform/android/meson.build
+++ b/platform/android/meson.build
@@ -7,8 +7,8 @@
 ################################################################################
 _target_android_logo = custom_target(
     'android_logo',
-    output: ['logo.gen.h'],
-    input: ['logo.png'],
+    output: ['logo_svg.gen.h'],
+    input: ['logo.svg'],
     command: [SCRIPT_PLATFORM_LOGO, '@INPUT@', '@OUTPUT@', 'android'],
     build_by_default: true
 )
@@ -16,8 +16,8 @@ SOURCES += [_target_android_logo]
 
 _target_android_run_icon = custom_target(
     'android_run_icon',
-    output: ['run_icon.gen.h'],
-    input: ['run_icon.png'],
+    output: ['run_icon_svg.gen.h'],
+    input: ['run_icon.svg'],
     command: [SCRIPT_PLATFORM_LOGO, '@INPUT@', '@OUTPUT@', 'android'],
     build_by_default: true
 )
