--- a/modules/meson.build
+++ b/modules/meson.build
@@ -1,4 +1,5 @@
 module_dirs = ['basis_universal',
+  'astcenc',
   'bmp',
   'bullet',
   'camera',
@@ -9,7 +10,7 @@ module_dirs = ['basis_universal',
   'enet',
   'etcpak',
 #  'fbx',
-#  'freetype',
+  'freetype',
 #  'gdnative',
   'gdscript',
   'glslang',
@@ -25,10 +26,13 @@ module_dirs = ['basis_universal',
   'mobile_vr',
   'mono',
   'msdfgen',
+  'multiplayer',
   'navigation',
+  'noise',
   'ogg',
 #  'opensimplex',
-#  'raycast',
+  'openxr',
+  'raycast',
   'regex',
   'squish',
   'svg',
@@ -46,6 +50,7 @@ module_dirs = ['basis_universal',
   'websocket',
   'webxr',
   'xatlas_unwrap',
+  'zip',
 ]
 
 disabled_modules = get_option('disabled_modules')
