--- a/servers/rendering/renderer_rd/shaders/effects/meson.build
+++ b/servers/rendering/renderer_rd/shaders/effects/meson.build
@@ -10,5 +10,6 @@ foreach glsl_file : effect_shaders
         build_by_default: true
     )
 
+    SHADER_HEADERS += [shad_target]
     SOURCES += [shad_target]
 endforeach
